# SubFX

./: .appveyor.yml  .drone.yml  .gitignore  .travis.yml  ReadMe.md
src/: CMakeLists.txt  appveyor.build.bat  config.h.in  init.c
src/CoreLib/: CMakeLists.txt  CoreLib.hpp  Makefile  ReadMe.md  ass.cpp  ass.hpp  asscommon.hpp  assparser.cpp  assparser.hpp  common.cpp  common.hpp  file.cpp  file.hpp  fonthandle.cpp  fonthandle.hpp  math.cpp  math.hpp  shape.cpp  shape.hpp  utf8.cpp  utf8.hpp
src/CoreLib/python/: CMakeLists.txt  assparserpy.cpp  assparserpy.hpp  corelib.cpp  corelibpy.cpp
src/SubFX/: CMakeLists.txt  ass.c  ass.cpp  ass.h  assparser.c  assparser.cpp  assparser.h  assparserregex.h  assregex.h  common.h  fonthandle.c  fonthandle.cpp  fonthandle.h  global.c  global.h  init.c  logger.c  logger.h  map.c  map.h  misc.c  misc.h  mutex.c  mutex.h  ptrvector.c  ptrvector.h  regex.c  regex.h  smath.c  smath.h  subfx.c  subfx.h  types.c  utf8.c  utf8.h  vector.c  vector.h
src/SubFX/ass/: data.c  data.h
src/SubFX/cli/: CMakeLists.txt  asslauncher.cpp  asslauncher.hpp  launcher.cpp  launcher.hpp  main.cpp
src/SubFX/common/: assparserpy.cpp  assparserpy.hpp  configparser.cpp  configparser.hpp  subfxassinit.cpp  subfxassinit.hpp  subfxinit.cpp  subfxinit.hpp
src/SubFX/gui/: CMakeLists.txt  main.cpp
src/SubFX/gui/background/: assinitbg.cpp  assinitbg.hpp
src/SubFX/gui/ui/: logpanel.cpp  logpanel.hpp  logpanel.ui  mainpanel.cpp  mainpanel.hpp  mainpanel.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/SubFX/test/: CMakeLists.txt
src/SubFX/test/ass/: CMakeLists.txt  main.c
src/SubFX/test/fonthandle/: CMakeLists.txt  main.c
src/SubFX/test/logger/: CMakeLists.txt  main.c
src/SubFX/test/map/: CMakeLists.txt
src/SubFX/test/math/: CMakeLists.txt  main.c  testingcase.c  testingcase.h
src/SubFX/test/misc/: CMakeLists.txt  main.c
src/SubFX/test/ptrvector/: main.c
src/SubFX/test/utf8/: CMakeLists.txt  main.c  test.txt.in
src/SubFX/test/vector/: CMakeLists.txt  main.c
src/YutilsCpp/: CMakeLists.txt  ReadMe.md  YutilsCpp.hpp  ass.cpp  ass.h  ass.hpp  asscommon.h  asscommon.hpp  assparser.cpp  assparser.hpp  asswriter.cpp  common.cpp  common.hpp  file.cpp  file.hpp  fonthandle.cpp  fonthandle.h  fonthandle.hpp  init.c  init.h  math.c  math.cpp  math.h  math.hpp  matrix.cpp  shape.cpp  shape.hpp  utf8.cpp  utf8.hpp
src/YutilsCpp/doc/: ReadMe.md  math.md
src/YutilsCpp/internal/: asswriter_internal.cpp  asswriter_internal.hpp  math_internal.c  math_internal.cpp  math_internal.h  math_internal.hpp  shape_internal.cpp  shape_internal.hpp
src/YutilsCpp/python/: CMakeLists.txt  assPy.py  assparserpy.cpp  assparserpy.hpp  asspy.py  setup.py.in  yutilspy.cpp
src/YutilsCpp/python/examples/: example.py
src/YutilsCpp/test/: CMakeLists.txt
src/YutilsCpp/test/ass/: CMakeLists.txt  main.c  main.cpp
src/YutilsCpp/test/assparser/: CMakeLists.txt  assdumper.cpp  assdumper.hpp  in.ass.in  main.cpp
src/YutilsCpp/test/fonthandle/: CMakeLists.txt  main.c  main.cpp
src/YutilsCpp/test/math/: CMakeLists.txt  main.c  main.cpp  testingcase.c  testingcase.cpp  testingcase.h  testingcase.hpp
src/cmake/: FindCairo.cmake  FindGLIB2.cmake  FindGObject.cmake  FindHarfBuzz.cmake  FindPANGO.cmake  FindPCRE2.cmake
src/common/: basecommon.h  basecommon.hpp
src/include/: SubFX.h  Utils  YutilsCpp
src/include/internal/: ass.h  assparser.h  basecommon.h  defines.h  fonthandle.h  logger.h  map.h  misc.h  ptrvector.h  smath.h  utf8.h  utils.h  utils.hpp  vector.h  yutils.h
src/include/internal/ass/: data.h
src/include/internal/utils/: common.hpp  logger.h  logger.hpp  map.h  math.h  math.hpp  misc.h  misc.hpp  pair.h  ptrvector.h  tuple.h  utf8.h  utf8.hpp  utils.hpp  vector.h
src/include/internal/yutilscpp/: ass.h  ass.hpp  asscommon.hpp  assparser.hpp  asswriter.hpp  common.hpp  fonthandle.h  fonthandle.hpp  math.h  math.hpp  matrix.hpp  shape.hpp  utf8.hpp
src/internal/: common.h  subfx.c  types.h
src/patch/: libpng.patch  zlib.patch
src/tcaxLib/: file.h
src/tcaxPy/: tcaxPy.py
src/tcfxLib/: CMakeLists.txt  file.cpp  file.hpp  image.cpp  image.h  image.hpp  pix.cpp  pix.h  pix.hpp  std.h  std.hpp  text.cpp  text.h  text.hpp  utility.cpp  utility.h  utility.hpp
src/tcfxLib/python/: tcfxlib.cpp
src/tcfxPy/: tcfxPy.py
src/utils/: CMakeLists.txt  common.cpp  init.c  init.h  logger.c  logger.cpp  logger.h  map.c  map.h  math.c  math.cpp  math.h  misc.c  misc.cpp  misc.h  pair.c  pair.h  ptrvector.c  ptrvector.h  tuple.c  tuple.h  utf8.c  utf8.cpp  utf8.h  vector.c  vector.h
src/utils/internal/: logger.cpp  logger.hpp
src/utils/test/: CMakeLists.txt
src/utils/test/logger/: CMakeLists.txt  main.c
src/utils/test/map/: main.c
src/utils/test/math/: CMakeLists.txt  main.c
src/utils/test/misc/: CMakeLists.txt  in.ass.in  main.c
src/utils/test/ptrvector/: CMakeLists.txt  main.c
src/utils/test/utf8/: CMakeLists.txt  main.c
src/utils/test/vector/: main.c
src/wrapper/: CMakeLists.txt
src/wrapper/cli/: CMakeLists.txt  asslauncher.cpp  main.cpp
src/wrapper/common/: configparser.cpp  print_script_template.hpp
src/wrapper/gui/: CMakeLists.txt  main.cpp
src/wrapper/gui/ui/: mainwindow.cpp  mainwindow.ui
