add_subdirectory(SubFX/test/logger)
add_subdirectory(SubFX/test/map)
add_subdirectory(SubFX/test/math)
add_subdirectory(SubFX/test/misc)
add_subdirectory(SubFX/test/ptrvector)
add_subdirectory(SubFX/test/utf8)
add_subdirectory(SubFX/test/vector)

add_subdirectory(SubFX/test/ass)
add_subdirectory(SubFX/test/fonthandle)
